<resources>
    <!-- App Strings -->
    <string name="app_name">LoftBlogMoneyTracker</string>
    <string name="action_settings">Settings</string>
    <string name="textName">Категория</string>
    <string name="sumName">Item price</string>
    <string name="itemTime">Item price</string>
    <string name="txtStat">Статистика</string>
    <string name="txtSettings">Настройки</string>
    <string name="summa">Сумма</string>
    <string name="summaHint">Введите сумму</string>
    <string name="descript">Наименование</string>
    <string name="descriptHint">Введите наименование</string>
    <string name="categories">Категория</string>
    <string name="categoriesEdit">Новое название категории</string>
    <string name="date_input">Дата</string>
    <string name="click_fab_text">Нажал</string>
    <string name="add_btn_txt">ДОБАВИТЬ ТРАТУ</string>
    <string name="rMoney">RUB</string>
    <!-- Строики в авторизации и регистрации -->
    <string name="etTextEmpty">Поле не должно быть пустым!</string>
    <string name="logText">Логин занят</string>
    <string name="entAnoth">Перейти к авторизации?</string>
    <string name="usrRegAct">UserRegAcrivity</string>
    <string name="loginAct">LoginActivity</string>
    <string name="tokenError">Token Error</string>
    <string name="inputPass">Введите пароль</string>
    <string name="inputLogin">Введите логин</string>
    <string name="headRegAct">Введите данные пользователя</string>
    <string name="entAnothlogin">Вводите другой логин</string>
    <string name="errLogin">Неверный логин</string>
    <string name="errPassword">Неверный пароль</string>
    <string name="anotherError">Error!</string>
    <string name="checkInternet">Ошибка подключение к интернету</string>
    <string name="registerButton">Зарегистрироваться</string>
    <string name="logBtnActivity">Уже есть логин?</string>
    <string name="titleRegister">РЕГИСТРАЦИЯ</string>
    <string name="loginButton">Войти</string>
    <!-- Строки для NavigationDrawer -->
    <string name="nav.drawer.expenses">Траты</string>
    <string name="nav.drawer.categories">Категории</string>
    <string name="nav.drawer.statistics">Статистика</string>
    <string name="nav.drawer.settings">Настройка</string>
    <string name="nav.drawer.logout">Выход</string>
    <string name="today">ВЫБОР ДАТЫ</string>
    <string name="spalsh_text">Money Tracker</string>
    <string name="text_name">Item name</string>
    <string name="sum_name">Item price</string>
    <string name="item_time">Item price</string>
    <string name="first_frame_butt">First Fragment</string>
    <string name="second_frame_butt">Second Fragment</string>
    <string name="checkGoogle">checkGoogle</string>
    <string name="content_authority">ru.loftblog.loftblogmoneytracker</string>
    <string name="sync_account_type">loftblogmoneytracker.loftblog.ru</string>
    <!-- Строки Действий -->
    <string name="remove">remove</string>
    <string name="search">search</string>
    <string name="titleCab">Выбрано</string>
    <string name="cancelBtn">ОТМЕНА</string>
    <string name="okBtn">OK</string>
    <string name="search_action">Поиск</string>
    <string name="statistics">Статистика</string>
    <string name="options">Настройки</string>
    <string name="expenses">Траты</string>
    <string name="categoriesFragment">Категории</string>
    <string name="deleteRecord">Запись удалена</string>
    <string name="addExpenses">Добавить трату</string>
    <string name="toastExpens">"Трата с примечанием "</string>
    <string name="toastExpensesAdd">" добавлена!"</string>
    <string name="pickerDialogName">datePicker</string>
    <string name="name_in_drawer">name</string>
    <string name="email">email</string>
    <string name="sumExpence">Сумма трат</string>
    <string name="toastAddCateg">"Категория: "</string>
    <string name="toastAddCateg_">" добавлена"</string>
    <string name="toastEditCat">" отредактирована!"</string>
    <string name="errorToastItem">Добавьте сначала категорию!</string>
    <string name="errorToastDate">Выберите Дату траты!!</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Включить уведомления</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Sound Notifications Preference -->
    <string name="sound_enable_notifications_key" translatable="false">sound_notifications</string>
    <string name="sound_enable_notifications_label">Звуковые уведомления</string>
    <string name="sound_enable_notifications_true">Enabled</string>
    <string name="sound_enable_notifications_false">Not Enabled</string>
    <string name="sound_enable_notifications_default" translatable="false">true</string>

    <!-- Vibra Notifications Preference -->
    <string name="vibra_enable_notifications_key" translatable="false">vibra_notifications</string>
    <string name="vibra_enable_notifications_label">Вибрация</string>
    <string name="vibra_enable_notifications_true">Enabled</string>
    <string name="vibra_enable_notifications_false">Not Enabled</string>
    <string name="vibra_enable_notifications_default" translatable="false">true</string>

    <!-- Light's Notifications Preference -->
    <string name="light_enable_notifications_key" translatable="false">light_notifications</string>
    <string name="light_enable_notifications_label">Светодиод</string>
    <string name="light_enable_notifications_true">Enabled</string>
    <string name="light_enable_notifications_false">Not Enabled</string>
    <string name="light_enable_notifications_default" translatable="false">true</string>

    <!-- String for notification bar-->
    <string name="notification_message">Данные синхронизированы!</string>
    <string name="pref_notification_section">Уведомления</string>
    <string name="notificationAction">Money Tracker</string>

</resources>
