<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundDark">
    <include layout="@layout/toolbar"
        android:id="@+id/include" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleRegister"
        android:id="@+id/txtPassword"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginLoginTxt" />

    <EditText
        android:id="@+id/edRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/inputLogin"
        android:ems="10"
        android:layout_marginTop="@dimen/marginLoginEd"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edRegPassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/inputPass"
        android:ems="10"
        android:layout_below="@+id/edRegister"
        android:layout_alignLeft="@+id/edRegister"
        android:layout_alignStart="@+id/edRegister" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/button_rounded_all"
        android:padding="@dimen/padding_field"
        android:text="@string/registerButton"
        android:layout_below="@+id/edRegPassw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/regAct_btn_margin" />

    <Button
        android:id="@+id/logToActiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/button_rounded_all"
        android:text="@string/logBtnActivity"
        android:padding="@dimen/text_items"
        android:layout_below="@+id/regBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/field_size" />
</RelativeLayout>