<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Container.Background"
    android:weightSum="1">
    <include layout="@layout/toolbar"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="9"
        android:background="@color/backGroundDark"
        android:padding="@dimen/act_add_txt"
        android:layout_weight="0.51">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textSize="@dimen/text_items"
            android:typeface="serif"
            android:textStyle="italic"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add_txt"
            android:text="@string/summa"
            android:layout_row="0"
            android:layout_column="0" />
        <EditText
            android:id="@+id/etPrice"
            android:gravity="end"
            android:maxWidth="@dimen/act_add_txt"
            android:hint="@string/summaHint"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margintop_txt"
            android:textStyle="italic"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add_txt"
            android:layout_row="0"
            android:layout_column="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textSize="@dimen/text_items"
            android:typeface="serif"
            android:textStyle="italic"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add_txt"
            android:text="@string/descript"
            android:layout_row="1"
            android:layout_column="0" />
        <EditText
            android:id="@+id/etDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/descriptHint"
            android:maxWidth="@dimen/act_add_txt"
            android:gravity="end"
            android:textStyle="italic"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add_txt"
            android:paddingRight="@dimen/margintop_txt"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:id="@+id/add_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textSize="@dimen/text_items"
            android:typeface="serif"
            android:textStyle="italic"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add_txt"
            android:text="@string/categories"
            android:layout_row="4"
            android:layout_column="0" />

        <Spinner
            android:id="@+id/etCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_items"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add_txt"
            android:layout_row="4"
            android:layout_column="1"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:textSize="@dimen/text_items"
            android:typeface="serif"
            android:textStyle="italic"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/act_add_txt"
            android:text="@string/date_input"
            android:layout_row="7"
            android:layout_column="0" />

        <TextView
            android:id="@+id/etToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_items"
            android:paddingRight="@dimen/margintop_txt"
            android:typeface="serif"
            android:onClick="showDatePickerDialog"
            android:textStyle="bold"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/act_add_txt"
            android:hint="@string/today"
            android:layout_row="7"
            android:layout_column="1" />

    </GridLayout>

    <Button
        android:id="@+id/addBtnExpence"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_all"
        android:padding="@dimen/text_items"
        android:text="@string/add_btn_txt"
        android:layout_marginTop="@dimen/regAct_btn_margin"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_gravity="center_horizontal" />

</LinearLayout>